Fix console exec character encoding problem Fix parseLog long operations (browser pause) on nodes with high-frequency updates Fix console 'jump' when updating

--- a/nodel-webui-js/src/theme.less
+++ b/nodel-webui-js/src/theme.less
@@ -601,6 +601,7 @@ div.nodel-console, div.nodel-serverlog {
   > div.base {
     outline: none;
   }
+  overflow-anchor: none;
 }
 div.nodel-charts {
   .chart-min{
